Show associated country for global search

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -115,6 +115,8 @@
                 } else {
                     address[idNoSpace] = document.getElementById(id).value;
                 }
+
+                address["country"] = " ";
             }
 
             // fetch values from input
