Change POST to PUT

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -80,7 +80,7 @@
             //};
 
             $.ajax({
-                type: "POST",
+                type: "PUT",
                 url: "AddressForm",
                 traditional: true,
                 contentType: 'application/json; charset=utf-8',
@@ -130,7 +130,7 @@
             //};
 
             $.ajax({
-                type: "POST",
+                type: "PUT",
                 url: "AddressForm",
                 traditional: true,
                 contentType: 'application/json; charset=utf-8',
